# furnace

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  benchmark-config.toml  build.rs  default.nix  deny.toml  docker-benchmark.toml  flake.nix  issue_4.md  local-benchmark-config.toml  resnet18_full_test.json  resnet18_single_sample.json  resnet18_small_test.json  sample_model.json  sample_model.mpk  small_test_sample.json  test_model.burn
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  good_first_issue.yml
.github/workflows/: ci.yml  release.yml  security.yml
.kiro/specs/burn-inference-server/: design.md  requirements.md  tasks.md
.kiro/specs/proper-burn-onnx-import/: design.md  requirements.md  tasks.md
.kiro/specs/readme-update/: design.md  requirements.md  tasks.md
benches/: inference_benchmark.rs
examples/: README.md  basic_mnist_create.rs  basic_mnist_test.rs  create_resnet_test_sample.rs  create_small_resnet_sample.rs  custom_data_test.rs  onnx_direct_inference.rs  resnet18_sample_data.rs
examples/basic_mnist/: README.md
examples/onnx_conversion/: README.md  pytorch_to_onnx.py  test_onnx_conversion.py
src/: api.rs  burn_model.rs  error.rs  lib.rs  main.rs  model.rs  onnx_models.rs  types.rs
src/benchmark/: containers.rs  controller.rs  load_generator.rs  metrics.rs  mod.rs  reports.rs
src/models/: mod.rs
tests/: integration_tests.rs
